--- a/comprehensive_preview.html
+++ b/comprehensive_preview.html
@@ -449,29 +449,43 @@
                 />
               </div>
 
-              <!-- Requested Sample UI Box (Refined) -->
+              <!-- Preview Mockup Container -->
               <div
-                id="sampleBox"
-                class="flex flex-col items-center w-full max-w-sm mx-auto p-8 rounded-3xl backdrop-blur-md bg-white/10 border border-white/20 z-10 mt-6 shadow-2xl transition-all duration-500"
+                id="previewMockup"
+                class="w-full max-w-sm mx-auto p-8 rounded-3xl backdrop-blur-md bg-white/10 border border-white/20 z-10 mt-6 shadow-2xl transition-all duration-500"
               >
-                <div class="w-full flex justify-between items-start mb-4">
-                  <div class="text-left">
+                <!-- WeatherNowCard Mockup Area -->
+                <div
+                  id="nowCardMockup"
+                  class="w-full text-left bg-transparent mb-8"
+                >
+                  <div class="mb-4">
                     <p
-                      class="text-[10px] font-bold opacity-60 uppercase tracking-widest"
+                      id="moodText"
+                      class="text-lg font-bold leading-relaxed opacity-90 break-keep"
                     >
-                      Current
+                      포근한 구름 아래 잠시 쉬어가기 좋은 날이에요 ☁️💪
                     </p>
-                    <h2 id="sampleTemp" class="text-5xl font-black">24.5°</h2>
                   </div>
-                  <div class="bg-white/20 p-2 rounded-xl">
-                    <span id="sampleIcon" class="text-3xl">☀️</span>
+                  <div class="flex items-end gap-2">
+                    <h2
+                      id="sampleTemp"
+                      class="text-6xl font-black tracking-tighter drop-shadow-lg"
+                    >
+                      24.5°
+                    </h2>
+                    <span
+                      id="sampleFeelsLike"
+                      class="text-xl text-blue-100 mb-2 font-medium opacity-90"
+                      >체감 26°</span
+                    >
                   </div>
                 </div>
 
                 <!-- Comparison Messages -->
                 <div
                   id="comparisonArea"
-                  class="w-full space-y-1.5 mb-6 p-3 rounded-2xl bg-black/10 border border-white/5 text-left"
+                  class="w-full space-y-2 p-4 rounded-2xl bg-black/10 border border-white/5 backdrop-blur-sm shadow-inner text-left mb-6"
                 >
                   <div id="yMsgRow" class="flex items-center gap-2">
                     <span class="text-xs">📅</span>
@@ -487,63 +501,78 @@
                   </div>
                 </div>
 
-                <!-- Dust Summary -->
-                <div class="w-full grid grid-cols-2 gap-2 mb-4">
+                <!-- WeatherDetailCard Mockup Area -->
+                <div
+                  id="detailCard"
+                  class="w-full grid grid-cols-2 gap-3 transition-all duration-500"
+                >
                   <div
-                    id="pm10Box"
-                    class="p-3 rounded-xl bg-blue-500/20 border border-white/10 text-left"
+                    class="bg-white/10 p-4 rounded-2xl border border-white/5 flex flex-col gap-1 shadow-sm"
                   >
-                    <p class="text-[9px] opacity-60 font-bold uppercase">
-                      PM10
-                    </p>
-                    <p id="pm10Label" class="text-sm font-black">좋음</p>
-                  </div>
-                  <div
-                    id="pm25Box"
-                    class="p-3 rounded-xl bg-blue-500/20 border border-white/10 text-left"
-                  >
-                    <p class="text-[9px] opacity-60 font-bold uppercase">
-                      PM2.5
-                    </p>
-                    <p id="pm25Label" class="text-sm font-black">좋음</p>
-                  </div>
-                </div>
-
-                <!-- NEW: Items Area -->
-                <div id="itemArea" class="w-full text-left">
-                  <p
-                    class="text-[10px] font-bold opacity-60 uppercase mb-2 tracking-widest"
-                  >
-                    Required Items
-                  </p>
-                  <div
-                    id="maskItem"
-                    class="hidden p-4 rounded-xl bg-white border-2 border-red-200 shadow-sm flex flex-col items-start gap-1"
-                  >
-                    <div class="flex justify-between w-full">
-                      <span class="text-2xl">😷</span>
+                    <div class="flex items-center gap-2 mb-1">
+                      <span class="text-blue-200/80">💧</span>
                       <span
-                        class="text-[10px] font-bold text-red-500 bg-red-100 px-1.5 py-0.5 rounded"
-                        >필수</span
+                        class="text-[11px] font-bold text-blue-100/60 uppercase"
+                        >습도</span
                       >
                     </div>
-                    <span class="font-bold text-slate-800">마스크</span>
                     <span
-                      id="maskReason"
-                      class="text-[10px] text-red-600 font-medium"
-                      >미세먼지 농도가 높아요</span
+                      id="detailHumidity"
+                      class="text-lg font-black text-white"
+                      >45%</span
                     >
                   </div>
                   <div
-                    id="noItem"
-                    class="bg-green-500/10 p-4 rounded-2xl border border-white/10 flex items-center gap-3"
+                    class="bg-white/10 p-4 rounded-2xl border border-white/5 flex flex-col gap-1 shadow-sm"
                   >
-                    <span class="text-lg">✅</span>
-                    <div>
-                      <p class="text-[11px] font-bold text-white/90">
-                        필수 준비물이 없어요
-                      </p>
-                      <p class="text-[9px] opacity-60">날씨가 너무 좋아요!</p>
+                    <div class="flex items-center gap-2 mb-1">
+                      <span class="text-blue-200/80">☔</span>
+                      <span
+                        class="text-[11px] font-bold text-blue-100/60 uppercase"
+                        >강수확률</span
+                      >
+                    </div>
+                    <span id="detailPop" class="text-lg font-black text-white"
+                      >0%</span
+                    >
+                  </div>
+                  <div
+                    class="bg-white/10 p-4 rounded-2xl border border-white/5 flex flex-col gap-1 shadow-sm"
+                  >
+                    <div class="flex items-center gap-2 mb-1">
+                      <span class="text-blue-200/80">☀️</span>
+                      <span
+                        class="text-[11px] font-bold text-blue-100/60 uppercase"
+                        >자외선</span
+                      >
+                    </div>
+                    <span
+                      id="detailUV"
+                      class="text-lg font-black text-green-300"
+                      >낮음</span
+                    >
+                  </div>
+                  <div
+                    class="bg-white/10 p-4 rounded-2xl border border-white/5 flex flex-col gap-1 shadow-sm"
+                  >
+                    <div class="flex items-center gap-2 mb-1">
+                      <span class="text-blue-200/80">🌬️</span>
+                      <span
+                        class="text-[11px] font-bold text-blue-100/60 uppercase"
+                        >풍속</span
+                      >
+                    </div>
+                    <div class="flex items-baseline gap-1">
+                      <span
+                        id="detailWind"
+                        class="text-lg font-black text-white"
+                        >0m/s</span
+                      >
+                      <span
+                        id="detailWindDir"
+                        class="text-[10px] text-blue-100/40"
+                        >북풍</span
+                      >
                     </div>
                   </div>
                 </div>
@@ -597,6 +626,34 @@
         noon: "bg-gradient-to-b from-sky-400 via-blue-200 to-sky-100",
         afternoon: "bg-gradient-to-b from-sky-200 via-indigo-100 to-orange-50",
         sunset: "bg-gradient-to-b from-orange-400 via-pink-400 to-indigo-900",
+      };
+
+      const moodMessages = {
+        clear: [
+          "눈부신 햇살만큼 당신의 오늘이 반짝이길 ✨🌞",
+          "하늘까지 응원해주는 하루예요 🌈",
+          "괜히 기분 좋아지는 하늘이에요 ☀️",
+        ],
+        rain: [
+          "토닥토닥 빗소리에 마음까지 차분해지네요 🌧️☕",
+          "우산 속 작은 쉼표 같은 하루예요 ☂️",
+          "살짝 느려져도 괜찮은, 비 오는 하루예요 🌦️",
+        ],
+        snow: [
+          "하얀 눈처럼 설레는 일이 생길 것 같아요 ❄️✨",
+          "세상이 조용해지는 눈 오는 날의 마법 ⛄",
+          "발자국 소리마저 부드러운 하루예요 ❄️",
+        ],
+        dust: [
+          "마음만은 누구보다 맑고 화창한 하루 되세요 🌿",
+          "오늘은 밖보다 나를 먼저 챙기는 날이에요 😷",
+          "천천히 숨 쉬고, 무리하지 마세요 🍃",
+        ],
+        default: [
+          "포근한 구름 아래 잠시 쉬어가기 좋은 날이에요 ☁️💪",
+          "천천히 가도 괜찮은 하루예요 🌫️",
+          "괜히 멍하니 하늘 보게 되는 날이에요 ☁️",
+        ],
       };
 
       const weatherOverlays = {
@@ -794,6 +851,45 @@
         haze.style.opacity = hazeOpacity;
         haze.style.backdropFilter = filterString;
         haze.style.webkitBackdropFilter = filterString;
+
+        // 4. Update Detailed Mockup
+        const directionsList = [
+          "북",
+          "북동",
+          "동",
+          "남동",
+          "남",
+          "남서",
+          "서",
+          "북서",
+        ];
+        const windIdx = Math.floor(((currentSettings.vec + 22.5) % 360) / 45);
+        document.getElementById("detailHumidity").textContent =
+          (40 + Math.random() * 20).toFixed(0) + "%";
+        document.getElementById("detailWind").textContent =
+          currentSettings.wsd + "m/s";
+        document.getElementById("detailWindDir").textContent =
+          directionsList[windIdx] + "풍";
+        document.getElementById("detailPop").textContent =
+          (currentSettings.rn1 > 0 ? 80 : 0) + "%";
+
+        // Feels Like Update
+        document.getElementById("sampleFeelsLike").textContent =
+          `체감 ${(24 + Math.random() * 4).toFixed(0)}°`;
+
+        // Mood Message Logic (Random Selection)
+        const pick = (arr) => arr[Math.floor(Math.random() * arr.length)];
+        const getMood = () => {
+          if (maxDust >= 3) return pick(moodMessages.dust);
+          if (currentSettings.weather === "rain" || currentSettings.rn1 > 0)
+            return pick(moodMessages.rain);
+          if (currentSettings.weather === "snow")
+            return pick(moodMessages.snow);
+          if (currentSettings.weather === "clear")
+            return pick(moodMessages.clear);
+          return pick(moodMessages.default);
+        };
+        document.getElementById("moodText").textContent = getMood();
 
         // 3. Wind Physics
         const rad = (currentSettings.vec * Math.PI) / 180;
